--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -17,6 +17,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background-color: white;
+	color: #333333;
 	font-family: "Lato", Helvetica, Arial, sans-serif;
 }
 
@@ -167,20 +168,12 @@ input[type=submit]:hover {
 	color: orange;
 }
 
-#index {
-	text-align: center;
-	justify-content: left;
-	-webkit-columns: 10vw 2;
-	   -moz-columns: 10vw 2;
-	        columns: 10vw 2;
-}
-
 .formarea {
 	margin: 0 auto;
 	width: 40%;
 }
 .formarea input[type=text] {
-	background-color: #f6f6f6;
+	background-color: #f1f1f1;
 	font-family: "Open Sans", sans-serif;
 	font-size: 1.0rem;
 	outline: 0;
@@ -190,41 +183,116 @@ input[type=submit]:hover {
 	margin: 0 0 1rem 0;
 	padding: 0.8rem;
 	width: 100%;
-	-webkit-transition: color .2s ease-in-out;
-	-moz-transition: color .2s ease-in-out;
-	-o-transition: color .2s ease-in-out;
-	transition: color .2s ease-in-out;
+	border-radius: 3px;
+	-webkit-transition: background-color .2s ease-in-out;
+	-moz-transition: background-color .2s ease-in-out;
+	-o-transition: background-color .2s ease-in-out;
+	transition: background-color .2s ease-in-out;
 }
 
-input[type=radio] {
-	display: none;
+.formarea input[type=text]:focus {
+	background-color: #e3e3e3;
 }
 
-input[type=radio] + label {
-	background-color: rgb(195, 195, 195);
+.formarea textarea {
+	background-color: #f1f1f1;
 	font-family: "Open Sans", sans-serif;
 	font-size: 1.0rem;
 	outline: 0;
 	border: 0;
 	color: #222;
+	display: block;
+	margin: 0 0 1rem 0;
+	padding: 0.8rem;
+	width: 100%;
+	height: 20em;
+	border-radius: 3px;
+	resize: none;
+	-webkit-transition: background-color .2s ease-in-out;
+	-moz-transition: background-color .2s ease-in-out;
+	-o-transition: background-color .2s ease-in-out;
+	transition: background-color .2s ease-in-out;
+}
+
+.formarea textarea:focus {
+	background-color: #e3e3e3;
+}
+
+input[type=checkbox] {
+	display: none;
+}
+
+input[type=checkbox] + label {
+	background-color: #999999;
+	font-family: "Open Sans", sans-serif;
+	font-size: 0.9rem;
+	outline: 0;
+	border: 0;
+	color: white;
 	display: inline-block;
 	margin: 0 0 1rem 0;
 	padding: 0.8rem;
-	width: 200px;
+	width: 32.5%;
+	min-width: 150px;
 	text-align: center;
-	-webkit-transition: color .2s ease-in-out;
-	-moz-transition: color .2s ease-in-out;
-	-o-transition: color .2s ease-in-out;
-	transition: color .2s ease-in-out;
+	box-shadow: 0 2px 0 0 #b2b2b2;
+	border-radius: 3px;
+	border: 1px solid #999999;
+	-webkit-transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+	-moz-transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+	-o-transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+	transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
 }
 
-input[type=radio] + label:hover {
-	background-color: rgb(220, 220, 220);
+input[type=checkbox] + label:hover {
+	background-color: #4c9393;
 	cursor: pointer;
+	box-shadow: 0 2px 0 0 #7fb2b2;
+	border: 1px solid #4c9393;
 }
 
-input[type=radio]:checked + label {
-	background-color: red;
+input[type=checkbox]:checked + label {
+	background-color: #197575;
+	box-shadow: 0 2px 0 0 #4c9393;
+	border: 1px solid #197575;
+}
+
+#index {
+	width: 60%;
+	margin: 0 auto;
+	justify-content: left;
+	-webkit-columns: 10vw 2;
+	   -moz-columns: 10vw 2;
+	        columns: 10vw 2;
+}
+
+#index a {
+	text-decoration: none;
+	color: #333333;
+	margin: 0px;
+	-webkit-transition: color .2s ease-in-out;
+	   -moz-transition: color .2s ease-in-out;
+	     -o-transition: color .2s ease-in-out;
+	        transition: color .2s ease-in-out;
+}
+
+#index a:hover {
+	color: orange;
+}
+
+#index dt {
+	font-size: 1.8vw;
+	border-bottom-style: solid;
+	border-bottom-color: #333333;
+	border-bottom-width: 1px;
+	-webkit-transition: border-bottom-color .2s ease-in-out;
+	   -moz-transition: border-bottom-color .2s ease-in-out;
+	     -o-transition: border-bottom-color .2s ease-in-out;
+	        transition: border-bottom-color .2s ease-in-out;
+}
+
+#index dt:hover {
+	border-bottom-color: orange;
 }
 
 #hamburger-button: {
