--- a/views/startups/new.ejs
+++ b/views/startups/new.ejs
@@ -21,41 +21,41 @@
 			<label>Select Vertical: </label><br>
 				<br>
 				
-				<input type="radio" name="startup[vertical]" value="marketplaces" id="marketplaces" />
-				<label class="radio" for="marketplaces">Marketplaces</label>
+				<input type="checkbox" name="startup[vertical]" value="marketplaces" id="marketplaces" />
+				<label class="checkbox" for="marketplaces">Marketplaces</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="social" />
-				<label>Social Media</label>
+				<input type="checkbox" name="startup[vertical]" value="social" id="social" />
+				<label class="checkbox" for="social">Social Media</label>
 				
 				
-				<input type="radio" name="startup[vertical]" value="eretail" />
-				<label>e-Tailers</label>
+				<input type="checkbox" name="startup[vertical]" value="eretail" id="eretail" />
+				<label class="checkbox" for="eretail">e-Tailers</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="enterprise" />
-				<label>Enterprise</label>
+				<input type="checkbox" name="startup[vertical]" value="enterprise" id="enterprise" />
+				<label class="checkbox" for="enterprise">Enterprise</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="Fintech" />
-				<label>Fintech</label>
+				<input type="checkbox" name="startup[vertical]" value="Fintech" id="Fintech" />
+				<label class="checkbox" for="Fintech">Fintech</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="Edtech" />
-				<label>Edtech</label>
+				<input type="checkbox" name="startup[vertical]" value="Edtech" id="Edtech" />
+				<label class="checkbox" for="Edtech">Edtech</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="Adtech" />
-				<label>Adtech</label>
+				<input type="checkbox" name="startup[vertical]" value="Adtech" id="Adtech" />
+				<label class="checkbox" for="Adtech">Adtech</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="Biotech" />
-				<label>Biotech</label>
+				<input type="checkbox" name="startup[vertical]" value="Biotech" id="Biotech" />
+				<label class="checkbox" for="Biotech">Biotech</label>
 
 				
-				<input type="radio" name="startup[vertical]" value="AI" />
-				<label>AI</label>
-				
+				<input type="checkbox" name="startup[vertical]" value="AI" id="AI" />
+				<label class="checkbox" for="AI">AI</label>
+			<br>	
 			<br>
 			
 			<input type="text" name="startup[location]" placeholder="Location" /><br>
@@ -68,7 +68,7 @@
 			
 			<input type="text" name="startup[pageOwner]" placeholder="Page Owner" /><br>
 			
-			<textarea name="startup[content]">What does this startup do?</textarea><br>
+			<textarea name="startup[content]" placeholder="What does this startup do?"></textarea><br>
 
 			<input type="submit" value="Add to Index" />
 		</form>
