--- a/views/startups/new.ejs
+++ b/views/startups/new.ejs
@@ -18,23 +18,23 @@
 			<br>
 			<input type="text" name="startup[name]" placeholder="Startup Name" /><br>
 
-			<label>Select Vertical: </label><br>
+			<label id="vertical">Select a Vertical: </label><br>
 				<br>
 				
-				<input type="checkbox" name="startup[vertical]" value="marketplaces" id="marketplaces" />
-				<label class="checkbox" for="marketplaces">Marketplaces</label>
+				<input type="checkbox" name="startup[vertical]" value="Marketplaces" id="Marketplaces" />
+				<label class="checkbox" for="Marketplaces">Marketplace</label>
 
 				
-				<input type="checkbox" name="startup[vertical]" value="social" id="social" />
-				<label class="checkbox" for="social">Social Media</label>
+				<input type="checkbox" name="startup[vertical]" value="Social" id="Social" />
+				<label class="checkbox" for="Social">Social Media</label>
 				
 				
-				<input type="checkbox" name="startup[vertical]" value="eretail" id="eretail" />
-				<label class="checkbox" for="eretail">e-Tailers</label>
+				<input type="checkbox" name="startup[vertical]" value="e-Retail" id="e-Retail" />
+				<label class="checkbox" for="e-Retail">e-Tailer</label>
 
 				
-				<input type="checkbox" name="startup[vertical]" value="enterprise" id="enterprise" />
-				<label class="checkbox" for="enterprise">Enterprise</label>
+				<input type="checkbox" name="startup[vertical]" value="Enterprise" id="Enterprise" />
+				<label class="checkbox" for="Enterprise">Enterprise</label>
 
 				
 				<input type="checkbox" name="startup[vertical]" value="Fintech" id="Fintech" />
@@ -64,13 +64,13 @@
 			
 			<input type="text" name="startup[capitalRaised]" placeholder="$ Raised" /><br>
 			
-			<input type="text" name="startup[hiring]" placeholder="Hiring?" /><br>
+			<input type="text" name="startup[hiring]" placeholder="Hiring:" /><br>
 			
 			<input type="text" name="startup[pageOwner]" placeholder="Page Owner" /><br>
 			
 			<textarea name="startup[content]" placeholder="What does this startup do?"></textarea><br>
 
-			<input type="submit" value="Add to Index" />
+			<input type="submit" value="Add to Index" /><br>
 		</form>
 		</div>
 	</div>
