--- a/views/startups/new.ejs
+++ b/views/startups/new.ejs
@@ -68,7 +68,7 @@
 			
 			<input type="text" name="startup[pageOwner]" placeholder="Page Owner" /><br>
 			
-			<textarea name="startup[content]" placeholder="What does this startup do?"></textarea><br>
+			<textarea name="startup[content]" placeholder="What does this startup do? Keep it nice and pithy :)"></textarea><br>
 
 			<input type="submit" value="Add to Index" /><br>
 		</form>
