--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -347,6 +347,41 @@ input[type=checkbox]:checked + label {
 	padding-top: 0;
 }
 
+#buttons {
+	position: relative;
+	left: 30%;
+}
+
+#edit a {
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+	display: inline-block;
+	margin: 3px;
+	padding: 0.5vw .5vw 0.5vw .5vw;
+	font-size: 1vw;
+	color: #fff;
+	width: 20vw;
+	height: 5vh;
+	text-align: center;
+	background-color: #4c9393;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bolder;
+	box-shadow: 0 2px 0 0 #7fb2b2;
+	border-radius: 2px;
+	border: 1px solid #4c9393;
+	text-decoration: none;
+	transition: background-color 0.3s ease-in-out;
+}	
+
+#edit a:hover {
+	background-color: #197575;
+	box-shadow: 0 2px 0 0 #4c9393;
+	border: 1px solid #197575;
+}
+
 /* ---------- HAMBURGER ---------- */
 
 #hamburger-button {
