--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<title>GA Ventures</title>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700|Open+Sans:700,300,400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700|Open+Sans:700,300,400' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	</head>
 	<body>
@@ -14,4 +14,4 @@
 		
 		<script type="text/javascript" src="/scripts/scripts.js"></script>
 	</body>
-</html>
+</html>	
