--- a/views/startups/new.ejs
+++ b/views/startups/new.ejs
@@ -24,37 +24,38 @@
 				<input type="checkbox" name="startup[vertical]" value="Marketplaces" id="Marketplaces" />
 				<label class="checkbox" for="Marketplaces">Marketplace</label>
 
-				
 				<input type="checkbox" name="startup[vertical]" value="Social" id="Social" />
-				<label class="checkbox" for="Social">Social Media</label>
-				
+				<label class="checkbox" for="Social">Social</label>
 				
 				<input type="checkbox" name="startup[vertical]" value="e-Retail" id="e-Retail" />
-				<label class="checkbox" for="e-Retail">e-Tailer</label>
+				<label class="checkbox" for="e-Retail">e-Tail</label>
 
-				
 				<input type="checkbox" name="startup[vertical]" value="Enterprise" id="Enterprise" />
 				<label class="checkbox" for="Enterprise">Enterprise</label>
 
-				
-				<input type="checkbox" name="startup[vertical]" value="Fintech" id="Fintech" />
-				<label class="checkbox" for="Fintech">Fintech</label>
+				<input type="checkbox" name="startup[vertical]" value="FinTech" id="FinTech" />
+				<label class="checkbox" for="FinTech">FinTech</label>
 
-				
-				<input type="checkbox" name="startup[vertical]" value="Edtech" id="Edtech" />
-				<label class="checkbox" for="Edtech">Edtech</label>
+				<input type="checkbox" name="startup[vertical]" value="EdTech" id="EdTech" />
+				<label class="checkbox" for="EdTech">EdTech</label>
 
-				
-				<input type="checkbox" name="startup[vertical]" value="Adtech" id="Adtech" />
-				<label class="checkbox" for="Adtech">Adtech</label>
+				<input type="checkbox" name="startup[vertical]" value="AdTech" id="AdTech" />
+				<label class="checkbox" for="AdTech">AdTech</label>
 
-				
-				<input type="checkbox" name="startup[vertical]" value="Biotech" id="Biotech" />
-				<label class="checkbox" for="Biotech">Biotech</label>
+				<input type="checkbox" name="startup[vertical]" value="HealTech" id="HealthTech" />
+				<label class="checkbox" for="HealthTech">HealthTech</label>
 
-				
-				<input type="checkbox" name="startup[vertical]" value="AI" id="AI" />
-				<label class="checkbox" for="AI">AI</label>
+				<input type="checkbox" name="startup[vertical]" value="Big Data" id="Big Data" />
+				<label class="checkbox" for="Big Data">Big Data</label>
+
+				<input type="checkbox" name="startup[vertical]" value="Security" id="Security" />
+				<label class="checkbox" for="Security">Security</label>
+
+				<input type="checkbox" name="startup[vertical]" value="Hardware" id="Hardware" />
+				<label class="checkbox" for="Hardware">Hardware</label>
+
+				<input type="checkbox" name="startup[vertical]" value="Other" id="Other" />
+				<label class="checkbox" for="Other">Other</label>
 			<br>	
 			<br>
 			
