--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -257,6 +257,45 @@ input[type=checkbox]:checked + label {
 	border: 1px solid #197575;
 }
 
+input[type=radio] {
+	display: none;
+}
+
+input[type=radio] + label {
+	background-color: #999999;
+	font-family: "Open Sans", sans-serif;
+	font-size: 0.9rem;
+	outline: 0;
+	border: 0;
+	color: white;
+	display: inline-block;
+	margin: 0 0 1rem 0;
+	padding: 0.8rem;
+	width: 32.5%;
+	min-width: 150px;
+	text-align: center;
+	box-shadow: 0 2px 0 0 #b2b2b2;
+	border-radius: 3px;
+	border: 1px solid #999999;
+	-webkit-transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+	-moz-transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+	-o-transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+	transition: background-color .2s ease-in-out, box-shadow .2s ease, border .2s ease;
+}
+
+input[type=radio] + label:hover {
+	background-color: #4c9393;
+	cursor: pointer;
+	box-shadow: 0 2px 0 0 #7fb2b2;
+	border: 1px solid #4c9393;
+}
+
+input[type=radio]:checked + label {
+	background-color: #197575;
+	box-shadow: 0 2px 0 0 #4c9393;
+	border: 1px solid #197575;
+}
+
 .formarea [type=submit] {
 	position: relative;
 	left: 22%;
@@ -304,6 +343,10 @@ input[type=checkbox]:checked + label {
 }
 
 #vertical {
+	opacity: 0.7;
+}
+
+#stage {
 	opacity: 0.7;
 }
 
