--- a/views/startups/edit.ejs
+++ b/views/startups/edit.ejs
@@ -11,6 +11,9 @@
         	<span></span>
         	<span></span>
       	</div>
+
+      	<span id="logout"><a href="../../">Logout</a></span>
+      	
   		<h1>Edit <%= startup.name %></h1>
   		<br>
   		<div class="formarea">		
