--- a/views/startups/index.ejs
+++ b/views/startups/index.ejs
@@ -11,7 +11,10 @@
         	<span></span>
         	<span></span>
       	</div>
-  		<h1>Startup Index</h1>
+
+      	<span id="logout"><a href="../../">Logout</a></span>
+
+  		<h1>Startup Wiki</h1>
   		<br>
   		<br>
   		<div id="index">
