--- a/views/startups/show.ejs
+++ b/views/startups/show.ejs
@@ -10,7 +10,9 @@
     	<span></span>
     	<span></span>
     	<span></span>
-  	</div>	
+  	</div>
+
+  	<span id="logout"><a href="../../">Logout</a></span>	
 
   	<div class="show" id="co">
 		<h1><%= startup.name %></h1>
