--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,3 +1,4 @@
+
 <div class="welcome">
 	<img src="/images/ga.png" alt="HTML5 Icon">
 	<h1>Ventures</h1>
@@ -8,4 +9,5 @@
 		<a href="/users/new">Sign Up</a>
 		<a href="/users/login">Log In</a>
 	</div>
+	<script type="text/javascript" src="/scripts/onload.js"></script>
 </div>
