--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -131,6 +131,10 @@ input[type=submit]:hover {
 	background-color: #e50000;
 }
 
+input[type=submit]:focus {
+	outline: none;
+}
+
 /* ---------- MAIN CONTENT PAGES ---------- */
 
 #content-wrapper {
@@ -517,17 +521,21 @@ ul#menu > li > a:hover {
 	background-color: #999999;
 }
 
+/* ---------- LOGOUT ---------- */
 
+#logout {
+	position: fixed;
+	left: 94%;
+}
 
+#logout a {
+	text-decoration: none;
+	color: black;
+	opacity: 0.5;
+	transition: opacity 0.3s ease-in-out;
+}
 
-
-
-
-
-
-
-
-
-
-
+#logout a:hover {
+	opacity: 0.7;
+}
 
