--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,12 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700|Open+Sans:700,300,400' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	</head>
-	<body>
+	<body class="body">
 		
 		<%- body %>
-		
+
 		<script type="text/javascript" src="/scripts/scripts.js"></script>
 	</body>
+		
 </html>	
