--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,8 @@
 	<body class="body">
 		
 		<%- body %>
-
+		
+		<script type="text/javascript" src="/scripts/onload.js"></script>
 		<script type="text/javascript" src="/scripts/scripts.js"></script>
 	</body>
 		
