--- a/views/startups/index.ejs
+++ b/views/startups/index.ejs
@@ -3,6 +3,20 @@
         <li><a href="/startups">Home</a></li>
         <li><a href="/startups/new">New Startup</a></li>
         <li><a href="#">Verticals</a></li>
+      	<ul id="categories">
+        	<li><a href="/startups">Marketplaces</a></li>
+        	<li><a href="/startups">Social</a></li>
+        	<li><a href="/startups">e-Retailers</a></li>
+        	<li><a href="/startups">Enterprise</a></li>
+        	<li><a href="/startups">FinTech</a></li>
+        	<li><a href="/startups">EdTech</a></li>
+        	<li><a href="/startups">AdTech</a></li>
+        	<li><a href="/startups">HealthTech</a></li>
+        	<li><a href="/startups">Big Data</a></li>
+        	<li><a href="/startups">Security</a></li>
+        	<li><a href="/startups">Hardware</a></li>
+        	<li><a href="/startups">Other</a></li>
+      	</ul>
       </ul>
     </div>
     <div id="content-wrapper" class="closed">
@@ -14,7 +28,7 @@
 
       	<span id="logout"><a href="../../">Logout</a></span>
 
-  		<h1>Startup Wiki</h1>
+  		<h1>A Wiki on Startups</h1>
   		<br>
   		<br>
   		<div id="index">
