--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -156,7 +156,7 @@ input[type=submit]:focus {
 }
 
 #content-wrapper h1 {
-	font-size: 4vw;
+	font-size: 5vw;
 	padding-top: 4%;
 	padding-bottom: 0;
 	margin: 0 auto;
@@ -327,7 +327,7 @@ input[type=radio]:checked + label {
 }
 
 #index dt {
-	font-size: 1.8vw;
+	font-size: 1.4vw;
 	border-bottom-style: solid;
 	border-bottom-color: #333333;
 	border-bottom-width: 1px;
@@ -518,6 +518,36 @@ ul#menu > li > a:link, a:visited {
 }
 
 ul#menu > li > a:hover {
+	background-color: #999999;
+}
+
+ul#categories {
+	list-style-type: none;
+	padding: 0 30px 0 0;
+}
+
+ul#categories li {
+	border-bottom: 1px solid darkgray;
+}
+
+ul#categories li.selected {
+	background-color: rgba(171, 171, 171, 1);
+}
+
+ul#categories li > a {
+	display: block;
+	padding: 10px 60px 10px 25px;
+	text-decoration: none;
+	font-weight: 300;
+	font-size: 0.9vw;
+	transition: background-color 0.3s ease-in-out;
+}
+
+ul#categories > li > a:link, a:visited {
+	color: white;
+}
+
+ul#categories > li > a:hover {
 	background-color: #999999;
 }
 
