--- a/views/startups/new.ejs
+++ b/views/startups/new.ejs
@@ -3,6 +3,20 @@
         <li><a href="/startups">Home</a></li>
         <li><a href="/startups/new">New Startup</a></li>
         <li><a href="#">Verticals</a></li>
+        <ul id="categories">
+        	<li><a href="/startups">Marketplaces</a></li>
+        	<li><a href="/startups">Social</a></li>
+        	<li><a href="/startups">e-Retailers</a></li>
+        	<li><a href="/startups">Enterprise</a></li>
+        	<li><a href="/startups">FinTech</a></li>
+        	<li><a href="/startups">EdTech</a></li>
+        	<li><a href="/startups">AdTech</a></li>
+        	<li><a href="/startups">HealthTech</a></li>
+        	<li><a href="/startups">Big Data</a></li>
+        	<li><a href="/startups">Security</a></li>
+        	<li><a href="/startups">Hardware</a></li>
+        	<li><a href="/startups">Other</a></li>
+      	</ul>
       </ul>
     </div>
     <div id="content-wrapper" class="closed">
@@ -13,7 +27,7 @@
       	</div>
 
       	<span id="logout"><a href="../../">Logout</a></span>
-      	
+
   		<h1>Add a Startup</h1>
   		<br>
   		<div class="formarea">
